[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "roguelike"
version = "0.1.0"
description = "Roguelike Tutorial"
authors = ["Luiz F. A. de Prá <rawarkanis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tcod = "^11.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0",allows-prereleases = true}
coverage = "^4.5"
flake8 = "^3.7"
pre-commit = "^1.16"
pytest = "^4.6"
pytest-cov = "^2.7"
ipdb = {version = "^0.12.0",optional = true}
ipython = {version = "^7.5",optional = true}
isort = "^4.3"

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parenthesis = true
known_localfolder = "tests,map_objects"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
